<resources>
    <string name="app_name">App name</string>

    <!-- General -->
    <string name="ok">OK</string>
    <string name="please_wait">Please wait…</string>

    <string name="cal">kcal</string>

    <string name="calories">Calories</string>
    <string name="carbs">Carbs</string>
    <string name="carbohydrates">Carbohydrates</string>
    <string name="fats">Fats</string>
    <string name="proteins">Proteins</string>
    <string name="minerals">Minerals</string>
    <string name="vitamins">Vitamins</string>

    <string name="value_unit">%s %s</string>
    <string name="value_percent">%d%%</string>
    <string name="value_slash_value_g">%d/%d g</string>
    <string name="value_slash_value_cal">%d/%d kcal</string>
    <string name="value_1f">%.1f</string>
    <string name="value_1f_g">%.1fg</string>
    <string name="value_g">%sg</string>
    <string name="value_cal">%d kcal</string>
    <string name="int_g">%dg</string>

    <string name="unit_gram">g</string>

    <string name="search">Search</string>
    <string name="serving">Serving</string>

    <!-- Toolbar title -->
    <string name="title_water">Water</string>
    <string name="title_activity">Activity</string>
    <string name="title_nutrition">Nutrition</string>

    <!-- nutrition home -->
    <string name="snacks">Snacks</string>
    <string name="supper">Supper</string>
    <string name="dinner">Dinner</string>
    <string name="breakfast">Breakfast</string>

    <string name="nutrition_dashboard_goal_calories">Goal %d</string>
    <string name="nutrition_dashboard_goal_weight">Goal %dkg</string>

    <string name="header_weight">Weight</string>
    <string name="menu_nutrition_statistics">Statistics</string>

    <!-- nav menu -->
    <string name="nav_menu_nutrition">Nutrition</string>
    <string name="nav_menu_water">Water</string>
    <string name="nav_menu_activity">Activity</string>
    <string name="nav_menu_sign_out">Sign out</string>

    <!-- Add food-->
    <string name="tabs_recent">Recent</string>
    <string name="tabs_favorite">Favorite</string>
    <string name="add_food_search_hint">Search for foods…</string>

    <!-- nutrition details -->
    <string name="nutrition_details_facts_header">Nutrition Facts</string>
    <string name="nutrition_details_serving_amount_header">Serving amount</string>
    <string name="nutrition_details_serving_unit_header">Serving unit</string>
    <string name="menu_nutrition_details_save">Save</string>
    <string name="menu_nutrition_details_favorite">Favorite</string>

    <!-- Login -->
    <string name="login_header">Login Account</string>
    <string name="hint_email">Email Address</string>
    <string name="login_password_hint">Password</string>
    <string name="login_forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="login_or">OR</string>
    <string name="login_don_t_have_an_account">Don\'t have an account ?</string>
    <string name="login_btn_register"><u>REGISTER</u></string>

    <!-- Register -->
    <string name="register_header">Register Account</string>
    <string name="hint_username">Username</string>
    <string name="register">Register</string>

    <!-- Invalid input messages -->
    <string name="error_username_length">username must be 4–15 characters long</string>
    <string name="error_username_invalid">username contains invalid characters</string>
    <string name="error_email_invalid">invalid email address</string>
    <string name="error_password_invalid">password contains invalid characters</string>
    <string name="error_password_weak">password is too weak</string>

    <!-- Firebase auth exception messages-->
    <string name="firebase_exception_network">No internet connection found</string>
    <string name="error_invalid_custom_token">The custom token format is incorrect. Please check the documentation.</string>
    <string name="error_custom_token_mismatch">The custom token corresponds to a different audience.</string>
    <string name="error_invalid_credential">The supplied auth credential is malformed or has expired.</string>
    <string name="error_invalid_email">The email address is badly formatted.</string>
    <string name="error_wrong_password">The password is invalid or the user does not have a password.</string>
    <string name="error_user_missmatch">The supplied credentials do not correspond to the previously signed in user.</string>
    <string name="error_requires_recent_login">This operation is sensitive and requires recent authentication. Log in again before retrying this request.</string>
    <string name="error_account_exists_with_different_credential">An account already exists with the same email address but different sign-in credentials. Sign in using a provider associated with this email address.</string>
    <string name="error_email_already_in_use">The email address is already in use by another account.</string>
    <string name="error_credential_already_in_use">This credential is already associated with a different user account.</string>
    <string name="error_user_disabled">The user account has been disabled by an administrator.</string>
    <string name="error_user_token_expired">The user\'s credential is no longer valid. The user must sign in again.</string>
    <string name="error_user_not_found">There is no user record corresponding to this identifier. The user may have been deleted.</string>
    <string name="error_operation_not_allowed">This operation is not allowed. You must enable this service in the console.</string>
    <string name="error_weak_pssword">The given password is invalid.</string>
    <string name="error_authentication_failed">Authentication failed.</string>

    <!-- Firebase database exception messages-->
    <string name="error_something_went_wrong">Something went wrong, please try again later.</string>

    <!-- OnBoarding -->
    <string name="onboarding_back">back</string>
    <string name="onboarding_next">next</string>
    <string name="onboarding_finish">finish</string>

    <!-- Goal -->
    <string name="onboarding_goal_header">What\'s your goal?</string>
    <string name="onboarding_goal_o1">Lose weight</string>
    <string name="onboarding_goal_o2">Maintain weight</string>
    <string name="onboarding_goal_o3">Gain weight</string>

    <!-- Activity -->
    <string name="onboarding_activity_header">How active are you?</string>
    <string name="onboarding_activity_o1">Little to no exercise</string>
    <string name="onboarding_activity_o2">Light exercise (1–3 times per week)</string>
    <string name="onboarding_activity_o3">Moderate exercise (3–5 times per week)</string>
    <string name="onboarding_activity_o4">Heavy exercise (6–7 times per week)</string>
    <string name="onboarding_activity_o5">Very heavy (twice per day, extra heavy workouts)</string>

    <!-- Weight goal-->
    <string name="onboarding_goal_weight_goal_weight">Goal weight</string>
    <string name="onboarding_goal_weight_current_weight">Current weight</string>

    <string name="onboarding_goal_weight_gain_o1">Gain 0.25 kg per week</string>
    <string name="onboarding_goal_weight_gain_o2">Gain 0.5 kg per week</string>
    <string name="onboarding_goal_weight_gain_o3">Gain 0.75 kg per week</string>

    <string name="onboarding_goal_weight_lose_o1">Lose 0.25 kg per week</string>
    <string name="onboarding_goal_weight_lose_o2">Lose 0.5 kg per week</string>
    <string name="onboarding_goal_weight_lose_o3">Lose 0.75 kg per week</string>

    <!-- Info -->
    <string name="onboarding_info_gender_male">Male</string>
    <string name="onboarding_info_gender_female">Female</string>
    <string name="onboarding_info_header_gender">Choose your gender</string>
    <string name="onboarding_info_header_height">Height</string>
    <string name="onboarding_info_header_age">Age</string>

    <!-- OnBoarding alert dialog -->
    <string name="alert_title_invalid_weight_input">Invalid weight goal</string>
    <string name="alert_message_invalid_weight_input_lose">Goal is set to <i>lose weight</i> so goal weight should be less than current weight</string>
    <string name="alert_message_invalid_weight_input_gain">Goal is set to <i>gain weight</i> so goal weight should be more than current weight</string>

    <!-- Meal -->
    <string name="meal_goal_header">Goal</string>
    <string name="text_100g">100g</string>

    <!-- Search -->
    <string name="search_header">Search results</string>
    <string name="search_filter_btn_text">Filter</string>
    <string name="cholesterol">Cholesterol</string>
</resources>