<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:background="@color/colorPrimary">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_onboarding_activity_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onboarding_activity_header"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".1" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:checkedButton="@id/rb_onboarding_activity_no_exercise"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_onboarding_activity_header">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_onboarding_activity_no_exercise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onboarding_activity_o1"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />


        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_onboarding_activity_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onboarding_activity_o2"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />


        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_onboarding_activity_moderate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onboarding_activity_o3"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />


        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_onboarding_activity_heavy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onboarding_activity_o4"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />


        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_onboarding_activity_very_heavy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onboarding_activity_o5"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>