<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:background="@color/colorPrimary"
    android:padding="16dp"
    android:layout_height="match_parent">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_onboarding_goal_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="24sp"
        android:text="@string/onboarding_goal_header" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="32dp"
        android:checkedButton="@id/rb_onboarding_goal_maintain_weight"
        app:layout_constraintTop_toBottomOf="@id/tv_onboarding_goal_header"
        android:orientation="vertical" >

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_onboarding_goal_lose_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onboarding_goal_o1"
            android:textSize="18sp"
            android:textColor="@color/colorWhite"/>

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_onboarding_goal_maintain_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onboarding_goal_o2"
            android:textSize="18sp"
            android:textColor="@color/colorWhite"/>

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_onboarding_goal_gain_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onboarding_goal_o3"
            android:textSize="18sp"
            android:textColor="@color/colorWhite"/>
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>