<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".ui.screens.starter.authentication.login.LoginFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="@dimen/card_radius_registration"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".4"
        app:layout_constraintWidth_percent=".9">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="32dp"
            android:paddingTop="24dp"
            android:paddingEnd="32dp"
            android:paddingBottom="24dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_login_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_header"
                android:textAppearance="@style/Header"
                android:textSize="28sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_login_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:textColorHint="@color/colorTextSecondary"
                app:boxStrokeColor="@color/colorAccent"
                app:endIconDrawable="@drawable/ic_email"
                app:endIconMode="custom"
                app:endIconTint="@color/colorAccent"
                app:errorTextColor="@color/colorAccent"
                app:hintTextColor="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_login_header">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:textAppearance="@style/Header.Small"
                    android:textColor="@color/colorWhite"
                    android:textCursorDrawable="@null" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_login_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColorHint="@color/colorTextSecondary"
                app:boxStrokeColor="@color/colorAccent"
                app:errorTextColor="@color/colorAccent"
                app:hintTextColor="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_login_email"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorAccent"
                app:startIconCheckable="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_password_hint"
                    android:inputType="textPassword"
                    android:textAppearance="@style/Header.Small"
                    android:textColor="@color/colorWhite"
                    android:textCursorDrawable="@null" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login_forgot_password"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:text="@string/login_forgot_password"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@id/til_login_password"
                app:layout_constraintTop_toBottomOf="@id/til_login_password" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:paddingHorizontal="32dp"
                android:paddingVertical="10dp"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold"
                app:backgroundTint="@color/colorAccent"
                app:cornerRadius="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_login_forgot_password" />

            <View
                android:id="@+id/divider_login_start"
                android:layout_width="0dp"
                android:layout_height="@dimen/divider_height"
                android:alpha=".6"
                android:background="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="@id/tv_login_or"
                app:layout_constraintEnd_toStartOf="@id/tv_login_or"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_login_or" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_login_or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/login_or"
                android:textColor="@color/colorWhite"
                android:textSize="15sp"
                app:layout_constraintEnd_toStartOf="@id/divider_login_end"
                app:layout_constraintStart_toEndOf="@id/divider_login_start"
                app:layout_constraintTop_toBottomOf="@id/btn_login" />

            <View
                android:id="@+id/divider_login_end"
                android:layout_width="0dp"
                android:layout_height="@dimen/divider_height"
                android:alpha="0.6"
                android:background="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="@id/tv_login_or"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_login_or"
                app:layout_constraintTop_toTopOf="@id/tv_login_or" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_login_facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@android:color/transparent"
                android:elevation="10dp"
                app:layout_constraintEnd_toStartOf="@id/btn_login_google"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_login_or"
                app:srcCompat="@drawable/ic_facebook" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_login_google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@android:color/transparent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/btn_login_facebook"
                app:layout_constraintTop_toBottomOf="@id/tv_login_or"
                app:srcCompat="@drawable/ic_google" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_login_dont_have_an_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/login_don_t_have_an_account"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_login" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login_register"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/login_btn_register"
        android:textAppearance="@style/Header.Medium"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/tv_login_dont_have_an_account"
        app:layout_constraintStart_toStartOf="@id/tv_login_dont_have_an_account"
        app:layout_constraintTop_toBottomOf="@id/tv_login_dont_have_an_account" />
</androidx.constraintlayout.widget.ConstraintLayout>