<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".ui.screens.starter.authentication.register.RegisterFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="@dimen/card_radius_authentication"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias=".3"
        app:layout_constraintWidth_percent=".9">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="32dp"
            android:paddingTop="24dp"
            android:paddingEnd="32dp"
            android:paddingBottom="24dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_register_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_header"
                android:textAppearance="@style/Header"
                android:textSize="28sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_register_username"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:textColorHint="@color/colorTextSecondary"
                app:boxStrokeColor="@color/colorAccent"
                app:counterEnabled="true"
                app:counterMaxLength="15"
                app:counterTextColor="@color/colorTextSecondary"
                app:endIconDrawable="@drawable/ic_username"
                app:endIconMode="custom"
                app:endIconTint="@color/colorAccent"
                app:errorTextColor="@color/colorAccent"
                app:hintTextColor="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_register_header">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_register_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_username"
                    android:inputType="textPersonName"
                    android:textAppearance="@style/Header.Small"
                    android:textColor="@color/colorWhite" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_register_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColorHint="@color/colorTextSecondary"
                app:boxStrokeColor="@color/colorAccent"
                app:endIconDrawable="@drawable/ic_email"
                app:endIconMode="custom"
                app:endIconTint="@color/colorAccent"
                app:errorTextColor="@color/colorAccent"
                app:hintTextColor="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_register_username">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_register_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:textAppearance="@style/Header.Small"
                    android:textColor="@color/colorWhite"
                    android:textCursorDrawable="@null" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_register_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColorHint="@color/colorTextSecondary"
                app:boxStrokeColor="@color/colorAccent"
                app:errorTextColor="@color/colorAccent"
                app:hintTextColor="@color/colorAccent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_register_email"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorAccent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_register_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_password_hint"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:textAppearance="@style/Header.Small"
                    android:textColor="@color/colorWhite"
                    android:textCursorDrawable="@null" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:paddingHorizontal="32dp"
                android:paddingVertical="10dp"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold"
                app:backgroundTint="@color/colorAccent"
                app:cornerRadius="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/til_register_password" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>